# flashback-search

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
docs/: architecture-decisions.md  google-photos-integration.md
scripts/: get-models.ps1
src/: App.test.tsx  App.tsx  main.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  face.rs  gemini.rs  google.rs  lib.rs  main.rs  secrets.rs  state.rs  takeout.rs
src-tauri/src/commands/: auth.rs  debug.rs  import.rs  index.rs  library.rs  mod.rs  people.rs  settings.rs
src-tauri/src/db/: faces.rs  mod.rs  people.rs  photos.rs  settings.rs
src-tauri/src/integrations/: face.rs  gemini.rs  google.rs  mod.rs  takeout.rs
src-tauri/src/services/: people.rs
src-tauri/src/tests/: db.rs  gemini.rs  google.rs  mod.rs  secrets.rs  takeout.rs
src/components/: FaceSelector.tsx  Inspector.test.tsx  Inspector.tsx  Lightbox.tsx  PeoplePage.tsx  PhotoGrid.test.tsx  PhotoGrid.tsx  SearchBar.test.tsx  SearchBar.tsx  SettingsPage.test.tsx  SettingsPage.tsx
src/components/__tests__/: Inspector.test.tsx  PhotoGrid.test.tsx  SearchBar.test.tsx  SettingsPage.test.tsx
src/test/: factories.ts  setup.ts
ui-tips/app/: globals.css  layout.tsx  page.tsx
ui-tips/components/: navbar.tsx  photo-card.tsx  photo-detail.tsx  photo-grid.tsx
