[package]
name = "flashback"
version = "0.1.0"
description = "Flashback – local-first semantic search for Google Photos"
authors = ["linus"]
edition = "2021"

[lib]
name = "flashback_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
open = "5"
dirs-next = "2"
keyring = { version = "3", features = ["windows-native"] }
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "tiff"] }

[dev-dependencies]
tempfile = "3"
mockito = "1"
tokio = { version = "1", features = ["rt", "macros"] }
